--- a/AboutMe.html
+++ b/AboutMe.html
@@ -16,7 +16,7 @@
 
             <td>
                 
-    <p>Hey!!👋 I am <h1 class="name"><B>Alisha Chauhan</B></h1> 
+    <p>Hey!👋 I am <h1 class="name"><B>Alisha Chauhan</B></h1> 
    
   
         <br> I have  tried my level best to make web-development simple and easy to learn through this website.</p>
