--- a/me/contact me.html
+++ b/me/contact me.html
@@ -11,7 +11,7 @@
     <table cellspacing="10">
         <tr>
     <td><img src="images/contact.gif" height="250" width="250"></td>
-    <td><h1>Contact Details of Alisha are provided here:</h1></td>
+    <td><h1>Contact Details of Alisha are provided here:-</h1></td>
     </tr></table>
     
     <br>
