changed contact me

--- a/contact me.html
+++ b/contact me.html
@@ -15,7 +15,7 @@
     </tr></table>
     
     <br>
-    Feel free for any query mailing me at :-
+    Feel free for any query mailing me at :
     <br><br>
     <h3>email-id :</h3> calisha.1903@gmail.com
     <br>
