modified index me

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -16,10 +16,10 @@
 
             <td>
                 
-    <p>Hey!👋 I am <h1 class="name"><B>Alisha Chauhan</B></h1> 
+    <p>Hey!👋 I am <h1 class="name"><B><p class="name">Alisha Chauhan</B></h1></p> </p>
    
-  
-        <br> I have  tried my level best to make web-development simple and easy to learn through this website.</p>
+  <p>
+        <br> I am a developing programmar.</p>
     
             </td>
         </tr>
@@ -37,9 +37,7 @@
         <li>Drawing/Calligraphy/Crafting</li>
     </ul>
     <hr size="3" noshade>
-    <a href="contact me.html">
-    <h3>Contact Me</h3>
-</a>
+    <a href="contact me.html">Go to contact me</a>
 
 </body>
 </html>
